k8s/be-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-end
spec:
  selector:
    matchLabels:
      app: back-end
  template:
    metadata:
      labels:
        app: back-end
    spec:
      containers:
      - name: myapp
        image: 165304734991.dkr.ecr.ap-northeast-1.amazonaws.com/cloudcrew-be:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
