k8s/be-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-end-service
spec:
  type: LoadBalancer
  selector:
    app: back-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
