k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - host: www.cloudcrew.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: back-end-service
                port:
                  number: 80
